--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "rm -rf scripts && mkdir scripts && rm -rf styles && mkdir styles && node tasks/build.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "MIT",
+  "author": "Beni Buess <beni.buess@nzz.ch>",
+  "license": "",
   "dependencies": {
     "ajv": "^5.3.0",
     "autoprefixer": "^7.2.3",
