--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 - DOCKER_TAG=$TRAVIS_BRANCH
 script:
 - npm run build
+- npm run test
 - docker build -t $DOCKER_IMAGE_NAME:$DOCKER_TAG .
 after_success:
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"; docker tag $DOCKER_IMAGE_NAME:$DOCKER_TAG
