--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clone": "^2.1.1",
     "code": "^5.1.2",
     "cssnano": "^3.10.0",
+    "d3-format": "^1.2.1",
     "hapi": "^17.1.1",
     "hoek": "^5.0.2",
     "inert": "^5.0.1",
