script to migrate fixtureData

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf scripts && mkdir scripts && rm -rf styles && mkdir styles && node tasks/build.js",
-    "test": "lab -a code -c -P tests --verbose --leaks"
+    "test": "lab -a code -c -P tests --verbose --leaks",
+    "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
   "author": "Beni Buess <beni.buess@nzz.ch>",
   "license": "",
