--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "postcss": "^6.0.22",
     "postcss-import": "^11.1.0",
     "uglify-js": "^3.4.0"
+  },
+  "devDependencies": {
+    "jsdom": "^12.0.0"
   }
 }
