--- a/resources/fixtures/data/disappearing-columns.json
+++ b/resources/fixtures/data/disappearing-columns.json
@@ -128,7 +128,21 @@
   "options": {
     "hideTableHeader": false,
     "cardLayout": true,
-    "cardLayoutIfSmall": true
+    "cardLayoutIfSmall": true,
+    "minibar": {
+      "invertColors": false,
+      "barColor": {
+        "positive": {
+          "className": "",
+          "colorCode": ""
+        },
+        "negative": {
+          "className": "",
+          "colorCode": ""
+        }
+      },
+      "selectedColumn": null
+    }
   },
   "tool": "table",
   "subtitle": "State by state breakdown"
