--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "autoprefixer": "^8.6.5",
     "boom": "^7.2.2",
     "clone": "^2.1.2",
-    "code": "^5.2.3",
     "cssnano": "^3.10.0",
     "d3-format": "^1.3.2",
     "hapi": "^17.7.0",
     "hoek": "^5.0.4",
     "inert": "^5.1.1",
     "joi": "^13.7.0",
-    "lab": "^15.5.0",
     "node-fetch": "^2.2.1",
     "node-sass": "^4.10.0",
     "nunjucks": "^3.1.3",
@@ -31,7 +29,9 @@
     "uglify-js": "^3.4.9"
   },
   "devDependencies": {
+    "code": "^5.2.4",
     "html-minifier": "^3.5.21",
-    "jsdom": "^12.2.0"
+    "jsdom": "^12.2.0",
+    "lab": "^18.0.1"
   }
 }
