--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ cache:
 install:
   - npm install
 before_script:
-  - env DOCKER_IMAGE_NAME "q-table"
-  - env DOCKER_TAG $TRAVIS_BRANCH | sed s:/:__:g
+  - env DOCKER_IMAGE_NAME="q-table"
+  - env DOCKER_TAG=$TRAVIS_BRANCH | sed s:/:__:g
 script:
   - npm run build
   - npm run test
