--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ cache:
 install:
   - npm install
 before_script:
-  - env DOCKER_IMAGE_NAME="q-table"
-  - env DOCKER_TAG=$TRAVIS_BRANCH | sed s:/:__:g
+  - export DOCKER_IMAGE_NAME="q-table"
+  - export DOCKER_TAG=$(echo $TRAVIS_BRANCH | sed -e 's/\//_/g')
 script:
   - npm run build
   - npm run test
