--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "",
   "dependencies": {
     "ajv": "^6.9.1",
+    "array2d": "0.0.5",
     "autoprefixer": "^9.4.7",
     "boom": "^7.2.2",
     "clone": "^2.1.2",
