--- a/package.json
+++ b/package.json
@@ -13,26 +13,24 @@
   "dependencies": {
     "ajv": "^6.10.0",
     "array2d": "0.0.5",
-    "autoprefixer": "^9.5.0",
     "boom": "^7.3.0",
     "clone": "^2.1.2",
-    "cssnano": "^4.1.10",
     "d3-format": "^1.3.2",
     "hapi": "^18.1.0",
-    "hoek": "^6.1.3",
     "inert": "^5.1.2",
     "joi": "^14.3.1",
-    "node-fetch": "^2.3.0",
-    "node-sass": "^4.11.0",
     "nunjucks": "^3.2.0",
-    "postcss": "^7.0.14",
-    "postcss-import": "^12.0.1",
     "uglify-js": "^3.5.3"
   },
   "devDependencies": {
+    "autoprefixer": "^9.5.1",
     "code": "^5.2.4",
+    "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
     "jsdom": "^14.0.0",
-    "lab": "^18.0.2"
+    "lab": "^18.0.2",
+    "node-sass": "^4.11.0",
+    "postcss": "^7.0.14",
+    "postcss-import": "^12.0.1"
   }
 }
