--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "html-minifier": "^4.0.0",
     "jsdom": "^15.0.0",
     "lab": "^18.0.2",
-    "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "sass": "^1.19.0"
   }
 }
