--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "Beni Buess <beni.buess@nzz.ch>",
   "license": "",
   "dependencies": {
+    "@hapi/hapi": "^18.3.1",
+    "@hapi/boom": "^7.4.2",
+    "@hapi/inert": "^5.2.0",
+    "@hapi/joi": "^15.0.0",
     "ajv": "^6.10.0",
     "array2d": "0.0.5",
     "boom": "^7.3.0",
     "clone": "^2.1.2",
     "d3-format": "^1.3.2",
-    "hapi": "^18.1.0",
-    "inert": "^5.1.2",
-    "joi": "^14.3.1",
     "nunjucks": "^3.2.0",
     "uglify-js": "^3.5.3"
   },
