--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rm -rf scripts && mkdir scripts && rm -rf styles && mkdir styles && node tasks/build.js",
-    "test": "lab -a code -c -P tests --verbose --leaks",
+    "test": "lab -a @hapi/code -c -P tests --verbose --leaks",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
   "author": "Beni Buess <beni.buess@nzz.ch>",
@@ -24,12 +24,12 @@
     "uglify-js": "^3.5.3"
   },
   "devDependencies": {
+    "@hapi/lab": "^18.1.2",
+    "@hapi/code": "^5.3.1",
     "autoprefixer": "^9.5.1",
-    "code": "^5.2.4",
     "cssnano": "^4.1.10",
     "html-minifier": "^4.0.0",
     "jsdom": "^15.0.0",
-    "lab": "^18.0.2",
     "postcss": "^7.0.14",
     "postcss-import": "^12.0.1",
     "sass": "^1.19.0"
