--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - npm install
 before_script:
   - DOCKER_IMAGE_NAME="q-table"
-  - DOCKER_TAG=${TRAVIS_BRANCH/\//_}
+  - DOCKER_TAG=${TRAVIS_BRANCH//\//_}
 script:
   - npm run build
   - npm run test
