--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -rf scripts && mkdir scripts && rm -rf styles && mkdir styles && node tasks/build.js",
+    "compile-style-files": "node tasks/compileStyleFiles.js",
+    "transpile-ts-files": "ts-node tasks/transpileTsFiles",
+    "transpile-svelte-files": "svelte-strip -m false strip src/components/ dist/components/",
+    "dev": "run-p transpile-ts-files transpile-svelte-files compile-style-files",
+    "start": "node dev.js",
     "test": "lab -a @hapi/code -c -P tests --verbose --leaks",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
-  "author": "Beni Buess <beni.buess@nzz.ch>",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "@hapi/boom": "^9.1.3",
@@ -20,18 +24,24 @@
     "d3-format": "^1.4.5",
     "joi": "^17.4.2",
     "simple-statistics": "^7.7.0",
-    "svelte": "^3.44.2",
+    "svelte": "^3.48.0",
     "uglify-js": "^3.14.3"
   },
   "devDependencies": {
     "@hapi/code": "^8.0.5",
     "@hapi/lab": "^24.4.0",
+    "@types/node": "^17.0.35",
     "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
     "html-minifier": "^4.0.0",
     "jsdom": "^16.7.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
-    "sass": "^1.43.5"
+    "run-p": "0.0.0",
+    "sass": "^1.43.5",
+    "svelte-strip": "^1.0.1",
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.4"
   }
 }
