--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
+    "recursive-readdir-sync": "^1.0.6",
     "run-p": "0.0.0",
     "sass": "^1.43.5",
     "svelte-strip": "^1.0.1",
