--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@hapi/code": "^8.0.5",
     "@hapi/lab": "^24.4.0",
+    "@types/hapi": "^18.0.7",
     "@types/node": "^17.0.35",
     "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
