--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "q-table",
   "version": "5.0.9",
   "description": "",
-  "main": "index.js",
+  "main": "index.cjs",
   "type": "module",
   "scripts": {
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "transpile-ts-files": "ts-node tasks/transpileTsFiles",
     "transpile-svelte-files": "svelte-strip -m false strip src/components/ dist/components/",
     "dev": "run-p transpile-ts-files transpile-svelte-files compile-style-files",
-    "start": "node dev.js",
+    "start": "node dev.cjs",
     "test": "lab -a @hapi/code -c -P tests --verbose --leaks",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
@@ -33,8 +33,11 @@
     "@hapi/lab": "^24.4.0",
     "@types/hapi": "^18.0.7",
     "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
+    "eslint": "^8.16.0",
     "html-minifier": "^4.0.0",
     "jsdom": "^16.7.0",
     "npm-run-all": "^4.1.5",
@@ -45,6 +48,6 @@
     "sass": "^1.43.5",
     "svelte-strip": "^1.0.1",
     "ts-node": "^10.8.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   }
 }
