--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,11 @@
     "compilerOptions": {
         "module": "es2020",
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+        "esModuleInterop": true,
     },
     "ts-node": {
-        "esm": true
+        "esm": true,
+        "experimentalSpecifierResolution": true
     }
 }
