--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
   "devDependencies": {
     "@hapi/code": "^8.0.5",
     "@hapi/lab": "^24.4.0",
+    "@types/d3": "^7.4.0",
     "@types/hapi": "^18.0.7",
     "@types/node": "^17.0.35",
+    "@types/uglify-js": "^3.13.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "autoprefixer": "^9.8.8",
