--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
+        "strictNullChecks": true,
     },
     "ts-node": {
         "esm": true,
