--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,14 @@
 {
     "compilerOptions": {
+        "allowSyntheticDefaultImports": true,
+        "declaration": false,
+        "esModuleInterop": true,
         "module": "es2020",
         "moduleResolution": "node",
-        "allowSyntheticDefaultImports": true,
-        "esModuleInterop": true,
+        "noImplicitAny": true,
         "strictNullChecks": true,
+        "target": "ES2015",
+        "types": ["node"],
     },
     "ts-node": {
         "esm": true,
