--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@hapi/boom": "^9.1.3",
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.3",
+    "@types/hapi__inert": "^5.2.3",
     "ajv": "^6.12.6",
     "array2d": "0.0.5",
     "clone": "^2.1.2",
@@ -32,7 +33,6 @@
     "@hapi/code": "^8.0.5",
     "@hapi/lab": "^24.4.0",
     "@types/d3": "^7.4.0",
-    "@types/hapi": "^18.0.7",
     "@types/node": "^17.0.35",
     "@types/uglify-js": "^3.13.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
