--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "transpile-ts-files": "ts-node tasks/transpileTsFiles",
     "transpile-svelte-files": "svelte-strip -m false strip src/components/ dist/components/",
-    "dev": "run-p transpile-ts-files transpile-svelte-files compile-style-files && node dev.js",
+    "build:server": "rollup -c rollup.config.ssr.js",
+    "dev": "run-p transpile-ts-files build:server compile-style-files && node dev.js",
+
     "start": "nodemon --exec \"npm run dev\"",
-    "test": "lab -a @hapi/code -c -P tests --verbose --leaks",
+    "test": "lab -a @hapi/code -c --verbose --leaks",
+    "test2": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
   "author": "",
@@ -31,8 +34,10 @@
   },
   "devDependencies": {
     "@hapi/code": "^8.0.5",
-    "@hapi/lab": "^24.4.0",
+    "@hapi/lab": "^24.7.1",
     "@types/d3": "^7.4.0",
+    "@types/jest": "^28.1.1",
+    "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.35",
     "@types/uglify-js": "^3.13.2",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -41,15 +46,21 @@
     "cssnano": "^4.1.11",
     "eslint": "^8.16.0",
     "html-minifier": "^4.0.0",
+    "jest": "^28.1.1",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
     "recursive-readdir-sync": "^1.0.6",
+    "rollup": "^2.75.6",
+    "rollup-plugin-svelte": "^7.1.0",
     "run-p": "0.0.0",
     "sass": "^1.43.5",
+    "svelte-jester": "^2.3.2",
+    "svelte-preprocess": "^4.10.7",
     "svelte-strip": "^1.0.1",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
   }
