--- a/package.json
+++ b/package.json
@@ -6,14 +6,10 @@
   "type": "module",
   "scripts": {
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
-    "transpile-ts-files": "ts-node tasks/transpileTsFiles",
-    "transpile-svelte-files": "svelte-strip -m false strip src/components/ dist/components/",
-    "build:server": "rollup -c rollup.config.ssr.js",
-    "dev": "run-p transpile-ts-files build:server compile-style-files && node dev.js",
-
+    "build": "rollup -c rollup.config.js",
+    "dev": "run-p build compile-style-files && node dev.js",
     "start": "nodemon --exec \"npm run dev\"",
-    "test": "lab -a @hapi/code -c --verbose --leaks",
-    "test2": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
+    "test": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
   "author": "",
@@ -22,9 +18,7 @@
     "@hapi/boom": "^9.1.3",
     "@hapi/hapi": "^20.2.1",
     "@hapi/inert": "^6.0.3",
-    "@types/hapi__inert": "^5.2.3",
     "ajv": "^6.12.6",
-    "array2d": "0.0.5",
     "clone": "^2.1.2",
     "d3-format": "^1.4.5",
     "joi": "^17.4.2",
@@ -34,8 +28,10 @@
   },
   "devDependencies": {
     "@hapi/code": "^8.0.5",
-    "@hapi/lab": "^24.7.1",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.3",
     "@types/d3": "^7.4.0",
+    "@types/hapi__inert": "^5.2.3",
     "@types/jest": "^28.1.1",
     "@types/jsdom": "^16.2.14",
     "@types/node": "^17.0.35",
@@ -52,7 +48,6 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
-    "recursive-readdir-sync": "^1.0.6",
     "rollup": "^2.75.6",
     "rollup-plugin-svelte": "^7.1.0",
     "run-p": "0.0.0",
