--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "rules": {
+        "no-unused-vars": 2,
         "quotes": [2, "single"],
         "@typescript-eslint/no-explicit-any": 2
     },
