--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
-    "build": "rollup -c rollup.config.js",
-    "dev": "run-p build compile-style-files && node dev.js",
+    "build": "rollup -c rollup.config.js && npm run compile-style-files",
+    "dev": "npm run build && node dev.js",
     "start": "nodemon --exec \"npm run dev\"",
     "test": "npm run build && npm run jest",
     "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
@@ -46,7 +46,6 @@
     "jest": "^28.1.1",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.16",
-    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
     "rollup": "^2.75.6",
