--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,9 @@
     "parser": "@typescript-eslint/parser",
     "plugins": ["@typescript-eslint"],
     "rules": {
-        "no-unused-vars": 2,
         "quotes": [2, "single"],
-        "@typescript-eslint/no-explicit-any": 2
+        "@typescript-eslint/no-explicit-any": 2,
+        "@typescript-eslint/no-unused-vars": 2
     },
     "parserOptions": {
         "sourceType": "module"
