--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,36 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["@typescript-eslint"],
-    "rules": {
-        "quotes": [2, "single"],
-        "@typescript-eslint/no-explicit-any": 2,
-        "@typescript-eslint/no-unused-vars": 2
-    },
-    "parserOptions": {
-        "sourceType": "module"
+  "parser": "@typescript-eslint/parser",
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
+  ],
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "tsconfigRootDir": "./",
+    "project": ["./tsconfig.json"],
+    "extraFileExtensions": [".svelte"]
+  },
+  "env": {
+    "es6": true,
+    "browser": true
+  },
+  "overrides": [
+    {
+      "files": ["*.svelte"],
+      "processor": "svelte3/svelte3"
     }
+  ],
+  "plugins": ["svelte3", "@typescript-eslint"],
+  "ignorePatterns": ["node_modules"],
+
+  "rules": {
+    "quotes": [
+      2,
+      "single"
+    ],
+    "@typescript-eslint/no-explicit-any": 2,
+    "@typescript-eslint/no-unused-vars": 2
+  }
 }
