Working on tooling and scaffolding

--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "start": "nodemon --exec \"npm run dev\"",
     "test": "npm run build && npm run jest",
     "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
-    "lint": "eslint --ext .js,.jsx,.svelte,.ts ./src",
-    "update-local-fixtureData": "node tasks/updateFixtureData.js"
+    "lint": "eslint --fix --ext .svelte,.ts --config ./src/.eslintrc.cjs ./src",
+    "update-local-fixtureData": "node tasks/updateFixtureData.js",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "MIT",
@@ -33,6 +34,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/d3": "^7.4.0",
     "@types/hapi__inert": "^5.2.3",
     "@types/jest": "^28.1.1",
@@ -46,11 +48,14 @@
     "eslint": "^8.16.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "html-minifier": "^4.0.0",
+    "husky": "^8.0.1",
     "jest": "^28.1.1",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.16",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.7.0",
     "rollup": "^2.75.6",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
