--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
     "lint": "eslint --fix --ext .svelte,.ts --config src/.eslintrc.cjs src",
     "svelte-check": "svelte-check",
+    "ts-check": "tsc --noEmit",
     "prettier-format": "prettier --write src/",
     "update-local-fixtureData": "node tasks/updateFixtureData.js",
     "prepare": "husky install"
