Setup new testing system for svelte

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
             "node",
             "svelte",
             "jest"
+        ],
+        "lib": [
+            "DOM"
         ]
     },
     "ts-node": {
