--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/svelte": "^3.1.3",
     "@tsconfig/svelte": "^3.0.0",
     "@types/d3": "^7.4.0",
     "@types/hapi__inert": "^5.2.3",
@@ -50,11 +52,11 @@
     "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
     "eslint": "^8.16.0",
-    "eslint-plugin-svelte3": "^4.0.0",
     "eslint-svelte3-preprocess": "^0.0.5",
     "html-minifier": "^4.0.0",
     "husky": "^8.0.1",
     "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.2",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.16",
     "postcss": "^7.0.39",
@@ -71,6 +73,6 @@
     "svelte-strip": "^1.0.1",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.0",
-    "typescript": "^4.7.2"
+    "typescript": "^4.7.4"
   }
 }
