--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@hapi/code": "^8.0.5",
     "@ota-meshi/eslint-plugin-svelte": "^0.34.1",
+    "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.3",
