Working on tests and better commands

--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "build": "rollup -c rollup.config.js && npm run compile-style-files",
+    "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "dev": "npm run build && node dev.js",
-    "start": "nodemon --exec \"npm run dev\"",
-    "test": "npm run build && npm run jest",
     "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
     "lint": "eslint --fix --ext .svelte,.ts --config src/.eslintrc.cjs src",
-    "svelte-check": "svelte-check",
-    "ts-check": "tsc --noEmit",
+    "lint:all": "run-s -c lint ts-check svelte-check",
+    "prepare": "husky install",
     "prettier-format": "prettier --write src/",
-    "update-local-fixtureData": "node tasks/updateFixtureData.js",
-    "prepare": "husky install"
+    "start": "nodemon --exec \"npm run dev\"",
+    "svelte-check": "svelte-check",
+    "test": "npm run build && npm run jest",
+    "ts-check": "tsc --noEmit",
+    "update-local-fixtureData": "node tasks/updateFixtureData.js"
   },
   "author": "",
   "license": "MIT",
@@ -60,6 +61,7 @@
     "jest-environment-jsdom": "^28.1.2",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.16",
+    "npm-run-all": "^4.1.5",
     "postcss": "^7.0.39",
     "postcss-import": "^12.0.1",
     "prettier": "^2.7.1",
