--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/boom": "^10.0.0",
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
+    "@nzz/et-utils-country-flag-emoji": "^1.0.0",
     "@types/d3-format": "^3.0.1",
     "ajv": "^8.11.0",
     "clone": "^2.1.2",
