--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:all": "run-s -c lint ts-check svelte-check",
     "prepare": "husky install",
     "start": "nodemon --exec \"npm run dev\"",
-    "svelte-check": "svelte-check",
+    "svelte-check": "svelte-check --threshold error",
     "test": "npm run build && npm run jest",
     "ts-check": "tsc --noEmit",
     "update-local-fixtureData": "node tasks/updateFixtureData.js"
@@ -26,53 +26,53 @@
     "@hapi/inert": "^7.0.0",
     "@nzz/et-utils-country-flag-emoji": "^1.0.0",
     "@types/d3-format": "^3.0.1",
-    "ajv": "^8.11.0",
+    "ajv": "^8.11.2",
     "clone": "^2.1.2",
     "d3-format": "^3.1.0",
-    "joi": "^17.6.1",
-    "simple-statistics": "^7.7.6",
-    "svelte": "^3.50.1",
-    "uglify-js": "^3.17.2"
+    "joi": "^17.7.0",
+    "simple-statistics": "^7.8.0",
+    "svelte": "^3.53.1",
+    "uglify-js": "^3.17.4"
   },
   "devDependencies": {
-    "@ota-meshi/eslint-plugin-svelte": "^0.34.1",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^3.2.1",
+    "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^3.0.0",
     "@types/hapi__inert": "^5.2.3",
     "@types/jest": "^28.1.8",
     "@types/jsdom": "^16.2.15",
     "@types/node": "^17.0.45",
-    "@types/uglify-js": "^3.17.0",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "autoprefixer": "^10.4.12",
-    "cssnano": "^5.1.13",
-    "eslint": "^8.24.0",
+    "@types/uglify-js": "^3.17.1",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.28.0",
+    "eslint-plugin-svelte": "^2.13.0",
     "eslint-svelte3-preprocess": "^0.0.5",
     "html-minifier": "^4.0.0",
-    "husky": "^8.0.1",
+    "husky": "^8.0.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "jsdom": "^16.7.0",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.16",
+    "postcss": "^8.4.19",
     "postcss-import": "^15.0.0",
     "rollup": "^2.79.1",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.55.0",
-    "svelte-check": "^2.9.0",
+    "sass": "^1.56.1",
+    "svelte-check": "^2.9.2",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
-    "svelte-strip": "^1.0.1",
+    "svelte-strip": "^1.0.3",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.3"
   }
 }
