--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup -c rollup.config.js && npm run compile-style-files",
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "dev": "npm run build && node dev.js",
-    "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --config jest.config.ts",
+    "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --env=@happy-dom/jest-environment --runInBand --config jest.config.ts",
     "lint": "eslint --fix --ext .svelte,.ts --config src/.eslintrc.cjs src",
     "lint:all": "run-s -c lint ts-check svelte-check",
     "prepare": "husky install",
@@ -25,7 +25,6 @@
     "@hapi/hapi": "^20.2.2",
     "@hapi/inert": "^7.0.0",
     "@nzz/et-utils-country-flag-emoji": "^1.0.0",
-    "@types/d3-format": "^3.0.1",
     "ajv": "^8.11.2",
     "clone": "^2.1.2",
     "d3-format": "^3.1.0",
@@ -35,16 +34,19 @@
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
+    "@happy-dom/jest-environment": "^7.7.0",
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^14.1.0",
     "@rollup/plugin-typescript": "^8.5.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^3.0.0",
+    "@types/d3-format": "^3.0.1",
     "@types/hapi__inert": "^5.2.3",
-    "@types/jest": "^28.1.8",
-    "@types/jsdom": "^16.2.15",
+    "@types/jest": "^29.2.3",
+    "@types/jsdom": "^20.0.1",
     "@types/node": "^17.0.45",
     "@types/uglify-js": "^3.17.1",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
@@ -52,13 +54,14 @@
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "eslint": "^8.28.0",
-    "eslint-plugin-svelte": "^2.13.0",
+    "eslint-plugin-svelte": "^2.13.1",
     "eslint-svelte3-preprocess": "^0.0.5",
+    "happy-dom": "^7.7.0",
     "html-minifier": "^4.0.0",
     "husky": "^8.0.2",
-    "jest": "^28.1.3",
-    "jest-environment-jsdom": "^28.1.3",
-    "jsdom": "^16.7.0",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jsdom": "^20.0.3",
     "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.19",
@@ -71,7 +74,7 @@
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
     "svelte-strip": "^1.0.3",
-    "ts-jest": "^28.0.8",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
