--- a/package.json
+++ b/package.json
@@ -49,8 +49,8 @@
     "@types/jsdom": "^20.0.1",
     "@types/node": "^17.0.45",
     "@types/uglify-js": "^3.17.1",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
+    "@typescript-eslint/eslint-plugin": "5.45",
+    "@typescript-eslint/parser": "5.45",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "eslint": "^8.28.0",
@@ -70,7 +70,7 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.56.1",
-    "svelte-check": "^2.9.2",
+    "svelte-check": "2.10",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
     "svelte-strip": "^1.0.3",
