--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "rollup -c rollup.config.js && npm run compile-style-files",
+    "build": "rollup --bundleConfigAsCjs -c rollup.config.js && npm run compile-style-files",
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "dev": "npm run build && node dev.js",
     "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --env=@happy-dom/jest-environment --runInBand --config jest.config.ts",
@@ -35,10 +35,11 @@
   },
   "devDependencies": {
     "@happy-dom/jest-environment": "^7.8.1",
-    "@rollup/plugin-alias": "^3.1.9",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^14.1.0",
-    "@rollup/plugin-typescript": "^8.5.0",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.1",
+    "@rollup/plugin-typescript": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
@@ -48,10 +49,10 @@
     "@types/hapi__inert": "^5.2.4",
     "@types/jest": "^29.2.5",
     "@types/jsdom": "^20.0.1",
-    "@types/node": "^17.0.45",
+    "@types/node": "^18.11.18",
     "@types/uglify-js": "^3.17.1",
-    "@typescript-eslint/eslint-plugin": "5.45",
-    "@typescript-eslint/parser": "5.45",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
     "eslint": "^8.31.0",
@@ -67,13 +68,12 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
     "postcss-import": "^15.1.0",
-    "rollup": "^2.79.1",
+    "rollup": "^3.9.1",
     "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.57.1",
-    "svelte-check": "2.10",
+    "svelte-check": "^3.0.1",
     "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.0",
     "svelte-strip": "^1.0.3",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
