--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@rollup/plugin-node-resolve": "^15.0.2",
     "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
+    "@swc/core": "^1.3.59",
+    "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
@@ -75,7 +77,6 @@
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^5.0.3",
     "svelte-strip": "^2.0.0",
-    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
