--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rollup --bundleConfigAsCjs -c rollup.config.js && npm run compile-style-files",
     "compile-style-files": "node tasks/compileStyleFiles.cjs",
     "dev": "npm run build && node dev.js",
-    "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --env=@happy-dom/jest-environment --runInBand --config jest.config.ts",
+    "jest": "NODE_OPTIONS='--experimental-vm-modules --experimental-specifier-resolution=node' jest --runInBand --config jest.config.ts",
     "lint": "eslint --fix --ext .svelte,.ts --config src/.eslintrc.cjs src",
     "lint:all": "run-s -c lint ts-check svelte-check",
     "prepare": "husky install",
@@ -34,7 +34,7 @@
     "uglify-js": "^3.17.4"
   },
   "devDependencies": {
-    "@happy-dom/jest-environment": "^8.9.0",
+    "@happy-dom/jest-environment": "^9.20.1",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.0.2",
@@ -50,7 +50,6 @@
     "@types/hapi__hapi": "^21.0.0",
     "@types/hapi__inert": "^5.2.6",
     "@types/jest": "^29.5.1",
-    "@types/jsdom": "^20.0.1",
     "@types/node": "^18.16.14",
     "@types/uglify-js": "^3.17.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
@@ -60,12 +59,11 @@
     "eslint": "^8.41.0",
     "eslint-plugin-svelte": "^2.29.0",
     "eslint-svelte3-preprocess": "^0.0.5",
-    "happy-dom": "^8.9.0",
+    "happy-dom": "^9.20.1",
     "html-minifier": "^4.0.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jsdom": "^20.0.3",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
